# www.bareasgi.com

./: README.md  pyproject.toml
bareasgi_web_site/: app.py  config.yml  front_page.py  markdown_handler.py  server.py
bareasgi_web_site/assets/: mui-style.css
bareasgi_web_site/templates/: base.html  index.html  markdown.html  why.html
etc/: bareasgi-web-server.service
